# GRu-Mo

./: CMakeLists.txt  GRu-Mo.py  README.md  buildme.sh  main.cpp
src/: database_management.h  main.cpp
